# praxis-redis

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  TESTING.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docker/redis/: docker-compose.yml
scripts/: redis_client.py  start.sh  stop.sh  test_redis_connection.py
tests/: __init__.py  conftest.py
tests/e2e/: test_complete_workflow.py
tests/integration/: __init__.py  test_redis_connection.py  test_redisearch.py  test_redisjson.py
tests/unit/: __init__.py  test_redis_config.py  test_redis_helpers.py
